# dot-ring

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TESTING.md  codecov.yml  pyproject.toml  setup.py  setup.sh  setup_cython.py  setup_mypyc.py  tox.ini
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
docs/: BENCHMARK.md  NICE_TO_HAVES.md
dot_ring/: __init__.py  keygen.py
dot_ring/curve/: __init__.py  curve.py  e2c.py  fast_math.pyx  field_arithmetic.pyx  field_element.py  fp2.py  glv.py  point.py
dot_ring/curve/montgomery/: mg_affine_point.py  mg_curve.py
dot_ring/curves/: __init__.py  curve.py  e2c.py  glv.py  point.py  pyproject.toml
dot_ring/curves/bls12_381/: __init__.py
dot_ring/curves/short_weierstrass/: __init__.py  curve.py
dot_ring/curves/specs/: __init__.py  bandersnatch.py  ed25519.py  jubjub.py
dot_ring/curves/twisted_edwards/: __init__.py  te_affine_point.py  te_curve.py
dot_ring/fiat_shamir/: __init__.py  phases.py  pyproject.toml  serialize.py  transcript.py
dot_ring/ring_proof/: __init__.py  constants.py  gotos.py  hash.py  helpers.py  params.py  proof_builder.py  proof_payload.py  pyproject.toml  ring_curve.py  verify.py  verify.pyx
dot_ring/ring_proof/columns/: columns.py  h_vec.json
dot_ring/ring_proof/constraints/: aggregation.py  constraints.py
dot_ring/ring_proof/curve/: bandersnatch.py  bls12_381.py
dot_ring/ring_proof/pcs/: __init__.py  bn254_kzg.py  bn254_serialization.py  bn254_srs.py  kzg.py  load_powers.py  opening.py  pairing.py  protocol.py  srs.py  utils.py
dot_ring/ring_proof/polynomial/: fft.py  interpolation.py  ntt.pyx  ops.py  poly_ops.pyx
dot_ring/ring_proof/proof/: aggregation_poly.py  linearization_poly.py  proof.py  quotient_poly.py
dot_ring/ring_proof/transcript/: __init__.py  phases.py  serialize.py  transcript.py
dot_ring/scripts/: export_python_proof.py
dot_ring/vrf/: __init__.py  ark_transcript.py  codec.py  delinearize.py  domain.py  io.py  primitives.py  protocol.py  pyproject.toml  spec_transcript.py  transcript.py  transcript_constants.py  vrf.py  vrf_protocol.py
dot_ring/vrf/ietf/: __init__.py  ietf.py  ietf_vrf.py  thin.py  thin_batch_item.py  thin_batch_verifier.py  thin_vrf.py  tiny.py  tiny_vrf.py
dot_ring/vrf/pedersen/: __init__.py  batch_verifier.py  pedersen.py  pedersen_batch_item.py  pedersen_batch_verifier.py  pedersen_vrf.py  vrf.py
dot_ring/vrf/ring/: __init__.py  batch_verifier.py  context.py  members.py  proof_builder.py  proof_payload.py  ring.py  ring_batch_item.py  ring_batch_verifier.py  ring_context.py  ring_keys.py  ring_proof_builder.py  ring_proof_payload.py  ring_root.py  ring_serialization.py  ring_verifier_key_builder.py  ring_vrf.py  root.py  vrf.py
scripts/: blst_source.py  generate_test_vectors.py  patch_blst.py  setup.sh  setup_cython.py  setup_env.py  vectors_print.py
tests/: bench_ietf.py  bench_pedersen.py  bench_ring_proof.py  bls12_381_G1_ssw_nu.py  bls12_381_G1_ssw_ro.py  bls12_381_G2_ssw_nu.py  bls12_381_G2_ssw_ro.py  bls12_38_G1_ell2_nu.py  curve25519_operations.py  curve448_operations.py  ed448_operations.py  mfd_tests.py  simple_tests.py  single_tests.py  test_all_vrfs.py  test_ark_vrf.py  test_bandersnatch_ark.py  test_bench_ring.py  test_bench_ring_proof.py  test_coverage_gaps.py  test_curve25519_e2c_ell2_nu.py  test_curve25519_e2c_ell2_ro.py  test_curve448_e2c_ell2_nu.py  test_curve448_e2c_ell2_ro.py  test_dot_ring_vectors.py  test_e2c.py  test_ed25519_ell2_nu.py  test_ed25519_ell2_ro.py  test_ed448_ell2_nu.py  test_ed448_ell2_ro.py  test_gaps.py  test_glv.py  test_ietf.py  test_keygen.py  test_p256_ssw_e2c.py  test_p256_ssw_e2c_nu.py  test_p384_ssw_e2c.py  test_p384_ssw_e2c_nu.py  test_p521_ssw_e2c_nu.py  test_p521_ssw_e2c_ro.py  (+14 more)
tests/benchmark/: bench_ietf.py  bench_pedersen.py  bench_ring_large.py  bench_ring_proof.py  memory_regression.py  test_bench_ietf.py  test_bench_pedersen.py  test_bench_ring.py  test_bench_ring_proof.py
tests/benchmarks/: bench_baseline.py  bench_native.py
tests/test_coverage/: __init__.py  test_aggregation.py  test_bls12_381_g2.py  test_blst.py  test_columns.py  test_curve_base.py  test_fft.py  test_field_element.py  test_glv.py  test_helpers.py  test_interpolation.py  test_kzg.py  test_ops.py  test_pairing.py  test_params.py  test_pcs_utils.py  test_serialize.py  test_srs.py  test_sw_curve.py  test_transcript.py  test_verify.py
tests/test_curve_ops/: test_curve.py  test_curve_ops.py  test_curves_s2p_p2s.py  test_gaps.py  test_glv.py  test_mg_curve.py  test_native_field.py  test_vector_ops.py
tests/test_extra_vrfs/: test_p384_sswu_ietf.py  test_p384_sswu_pedersen.py
tests/test_h2c_suites/: bls12_381_G1_ssw_nu.py  bls12_381_G1_ssw_ro.py  bls12_381_G2_ssw_nu.py  bls12_381_G2_ssw_ro.py  test_bls12_381_G2_ssw_nu.py  test_bls12_381_G2_ssw_ro.py  test_curve25519_e2c_ell2_nu.py  test_curve25519_e2c_ell2_ro.py  test_curve448_e2c_ell2_nu.py  test_curve448_e2c_ell2_ro.py  test_e2c_bandersnatch.py  test_ed25519_ell2_nu.py  test_ed25519_ell2_ro.py  test_ed448_ell2_nu.py  test_ed448_ell2_ro.py  test_h2c_nu.py  test_h2c_ro.py  test_p256_ssw_e2c_nu.py  test_p256_ssw_e2c_ro.py  test_p384_ssw_e2c_nu.py  test_p384_ssw_e2c_ro.py  test_p521_ssw_e2c_nu.py  test_p521_ssw_e2c_ro.py  test_secp256k1_e2c_nu.py  test_secp256k1_e2c_ro.py
tests/test_ietf/: test_ietf_ark.py  test_ietf_base.py
tests/test_pedersen/: test_pedersen_ark.py  test_pedersen_base.py  test_pedersen_ietf.py
tests/test_ring_vrf/: test_audit_regressions.py  test_ring_vrf.py
tests/utils/: arkworks_serde.py  profiler.py  python_to_rust_serde.py  rust_serde.py  test_bench_ietf.py  test_bench_pedersen.py  test_bench_ring.py
tests/vectors/: bls12_381_G1_ro.json  curve25519_nu.json  curve25519_ro.json  curve448_nu.json  curve448_ro.json  ed25519_nu.json  ed25519_ro.json  ed448_nu.json  ed448_ro.json  p256_nu.json  p256_ro.json  p384_nu.json  p384_ro.json  p521_nu.json  p521_ro.json  secp256k1_nu.json  secp256k1_ro.json
typings/py_ecc/: __init__.pyi
typings/sympy/: __init__.pyi
(+144 files in other folders)
