[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot_ring"
dynamic = ["version"]
description = "Dot Ring Suite meta-package aggregating cryptographic sub-packages."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["cryptography", "vrf", "ring-vrf", "bandersnatch"]

# Meta-package depends on its sub-packages pinned to identical versions.
dependencies = [
    "dot_ring-curves>=0.0.0.dev0",
    "dot_ring-fiat_shamir>=0.0.0.dev0",
    "dot_ring-ring_proof>=0.0.0.dev0",
    "dot_ring-vrf>=0.0.0.dev0",
]

[tool.hatch.version]
path = "dot_ring/__init__.py"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "coverage[toml]>=7.2.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["dot_ring"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "UP", "C90"]
ignore = ["E501"]