[project]
name = "dot-ring"
version = "0.1.3"
description = "Serves as a library to generate and verify a signature using IETF, Pedersen and Ring VRF-AD Schemes"
authors = [
    {name = "prasad-kumkar", email = "prasad@chainscore.finance"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "VRF", "VRF-AD", "IETF VRF", "Pedersen VRF",
    "Ring Proof", "Ring VRF", "Signature", "Proof",
    "Verify", "Cryptography", "Zero Knowledge",
    "PCS", "KZG", "FFT", "Polynomial",
    "Interpolation","Ring Root", "Commitment", "Constraints",
    "fflonk", "powers of tau", "string to point", "point to string",
    "encode to curve","public key", "elliptic curve cryptography", "proof to hash",
    "bls12_381", "Bandersnatch", "fiat shamir", "pairings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
    "Topic :: Utilities",
    "Topic :: System :: Archiving",
    "Topic :: Communications",
    "Typing :: Typed"
]
dependencies = [
    "numpy>=2.2.3",
    "sympy>=1.13.1",
    "pytest>=8.3.5",
    "py-ecc>=8.0.0",
    "gmpy2>=2.1.0"
]

[tool.setuptools.packages.find]
include = ["dot_ring*"]
exclude = ["tests*", "blst*", "perf*", "testenv*"]

[tool.setuptools.package-data]
dot_ring = [
    "py.typed",
    "vrf/data/*.bin",
    "ring_proof/columns/*.json",
    "blst/*.so",
    "blst/*.dylib",
    "blst/*.dll",
    "blst/*.pyd",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "Cython>=3.0.0",
    "build>=1.0.0",
    "setuptools>=65.0.0",
    "wheel>=0.38.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*SwigPy.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning"
]

[tool.pyright]
include = ["dot_ring", "tests", "scripts"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
extraPaths = ["."]

[project.urls]
Homepage = "https://github.com/chainscore/dot-ring"
Repository = "https://github.com/chainscore/dot-ring"
Issues = "https://github.com/chainscore/dot-ring/issues"
Documentation = "https://github.com/chainscore/dot-ring#readme"

[build-system]
requires = ["setuptools>=65.0.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"