[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot_ring-ring_proof"
dynamic = ["version"]
description = "Web3 Foundation Ring Proof implementation for Dot Ring Suite."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["cryptography", "ring-proof", "bandersnatch"]

[tool.hatch.version]
path = "dot_ring/ring_proof/__init__.py"

[project.optional-dependencies]
dev = ["ruff", "black", "isort", "pytest", "coverage[toml]"]